@@ -290,6 +290,18 @@ class MS_Model_Relationship extends MS_Model_CustomPostType {
 	 */
 	private $membership;
 
+	/**
+	 *
+	 * Recalculate the subscription expire date.
+	 * Set to false if you just want to the invoice to change for the current
+	 * invoice
+	 *
+	 * @author Paul Kevin
+	 * @since 1.0.3.6
+	 * @var Boolean
+	 */
+	private $recalculate_expire_date = true;
+
 	//
 	//
 	//
@@ -1222,7 +1234,7 @@ class MS_Model_Relationship extends MS_Model_CustomPostType {
 				$this->start_date,
 				$this->trial_expire_date
 			);
-			if ( ! $valid_date ) {
+			if ( ! $valid_date && $this->recalculate_expire_date ) {
 				$expire_date = $this->calc_expire_date( $this->start_date );
 			}
 		} else {
@@ -1339,6 +1351,7 @@ class MS_Model_Relationship extends MS_Model_CustomPostType {
 			}
 		} else {
 			if ( $paid ) {
+				
 				/*
 				 * Always extend the membership from current date or later, even if
 				 * the specified start-date is in the past.
@@ -1351,6 +1364,8 @@ class MS_Model_Relationship extends MS_Model_CustomPostType {
 				if ( MS_Helper_Period::is_after( $today, $start_date ) ) {
 					$start_date = $today;
 				}
+				//$this->log( 'calc_expire_date :: Today '.$today );
+				//$this->log( 'calc_expire_date :: Start Date '.$start_date  );
 			}
 
 			/*
@@ -1364,19 +1379,24 @@ class MS_Model_Relationship extends MS_Model_CustomPostType {
 					break;
 
 				case MS_Model_Membership::PAYMENT_TYPE_FINITE:
-					$period_unit = MS_Helper_Period::get_period_value(
-						$membership->period,
-						'period_unit'
-					);
-					$period_type = MS_Helper_Period::get_period_value(
-						$membership->period,
-						'period_type'
-					);
-					$expire_date = MS_Helper_Period::add_interval(
-						$period_unit,
-						$period_type,
-						$start_date
-					);
+					if ( $this->recalculate_expire_date ) {
+						$period_unit = MS_Helper_Period::get_period_value(
+							$membership->period,
+							'period_unit'
+						);
+						$period_type = MS_Helper_Period::get_period_value(
+							$membership->period,
+							'period_type'
+						);
+						$expire_date = MS_Helper_Period::add_interval(
+							$period_unit,
+							$period_type,
+							$start_date
+						);
+					} else {
+						$expire_date = $this->expire_date;
+					}
+					//$this->log( 'calc_expire_date :: New Expire Date '.$expire_date  );
 					break;
 
 				case MS_Model_Membership::PAYMENT_TYPE_DATE_RANGE:
@@ -2876,7 +2896,7 @@ class MS_Model_Relationship extends MS_Model_CustomPostType {
 						default:
 							// Either keep the current expire date (if valid) or
 							// calculate a new expire date, based on current date.
-							if ( ! $this->expire_date ) {
+							if ( ! $this->expire_date && $this->recalculate_expire_date ) {
 								$this->expire_date = $this->calc_expire_date(
 									MS_Helper_Period::current_date()
 								);
@@ -3150,6 +3170,16 @@ class MS_Model_Relationship extends MS_Model_CustomPostType {
 			'ms_model_relationship_check_membership_status_after',
 			$this
 		);
+	}
+
+	/**
+	 * Set the expire date recalculation
+	 *
+	 * @param Boolean $recalculate - true to recalculate the expire date
+	 * @author Paul Kevin
+	 */
+	public function set_recalculate_expire_date( $recalculate ) {
+		$this->recalculate_expire_date = $recalculate;
 	}
 
 	/**
